--- a/OpenInKitExample/Web Browsers/MobileSafari.plist
+++ b/OpenInKitExample/Web Browsers/MobileSafari.plist
@@ -2,11 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>scheme</key>
-	<string>http</string>
 	<key>name</key>
 	<string>Safari</string>
-	<key>OpenURL:</key>
-	<string>%@</string>
+	<key>openHttpUrl:</key>
+	<string>http://%@</string>
+	<key>openHttpsUrl:</key>
+	<string>https://%@</string>
 </dict>
 </plist>
