Capitalize 'URL' in web browser commands

--- a/OpenInKitExample/Web Browsers/MobileSafari.plist
+++ b/OpenInKitExample/Web Browsers/MobileSafari.plist
@@ -4,9 +4,9 @@
 <dict>
 	<key>name</key>
 	<string>Safari</string>
-	<key>openHttpUrl:</key>
+	<key>openHttpURL:</key>
 	<string>http://%@</string>
-	<key>openHttpsUrl:</key>
+	<key>openHttpsURL:</key>
 	<string>https://%@</string>
 </dict>
 </plist>
