--- a/OpenInKitExample/Web Browsers/Chrome.plist
+++ b/OpenInKitExample/Web Browsers/Chrome.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>openHttpsUrl:</key>
+	<key>openHttpsURL:</key>
 	<string>googlechromes://%@</string>
-	<key>openHttpUrl:</key>
+	<key>openHttpURL:</key>
 	<string>googlechrome://%@</string>
 	<key>name</key>
 	<string>Chrome</string>
