Add missing icons for maps/browsers

--- a/OpenInKitExample/Maps/Maps.plist
+++ b/OpenInKitExample/Maps/Maps.plist
@@ -5,6 +5,6 @@
 	<key>searchFor:near:</key>
 	<string>http://maps.apple.com/?q={query}&amp;ll={center}</string>
 	<key>name</key>
-	<string>Apple Maps</string>
+	<string>Maps</string>
 </dict>
 </plist>
