--- a/OpenInKitExample/Maps/Maps.plist
+++ b/OpenInKitExample/Maps/Maps.plist
@@ -9,6 +9,8 @@
 		<key>center</key>
 		<string>&amp;ll={center}</string>
 	</dict>
+	<key>directionsFrom:to:mode:</key>
+	<string>http://maps.apple.com/?saddr={from}&amp;daddr={to}</string>
 	<key>searchFor:</key>
 	<string>http://maps.apple.com/?q={query}</string>
 	<key>name</key>
