--- a/OpenInKitExample.xcodeproj/xcshareddata/xcschemes/OpenInKitExample.xcscheme
+++ b/OpenInKitExample.xcodeproj/xcshareddata/xcschemes/OpenInKitExample.xcscheme
@@ -14,6 +14,76 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E876C7C3D41F45DF93EB33C7"
+               BuildableName = "libPods-OpenInKitExampleTests.a"
+               BlueprintName = "Pods-OpenInKitExampleTests"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EFAC06C91B4245978AD80509"
+               BuildableName = "libPods-OpenInKitExampleTests-Expecta.a"
+               BlueprintName = "Pods-OpenInKitExampleTests-Expecta"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "01A06D94C9E049C3918A4867"
+               BuildableName = "libPods-OpenInKitExampleTests-OCHamcrest.a"
+               BlueprintName = "Pods-OpenInKitExampleTests-OCHamcrest"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E93A106245FE4D9EB510BC48"
+               BuildableName = "libPods-OpenInKitExampleTests-OCMockito.a"
+               BlueprintName = "Pods-OpenInKitExampleTests-OCMockito"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B25009A16B1C4A51996B7E40"
+               BuildableName = "libPods-OpenInKitExampleTests-Specta.a"
+               BlueprintName = "Pods-OpenInKitExampleTests-Specta"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "A610EF8C1844F5AF005FA08E"
                BuildableName = "OpenInKitExample.app"
                BlueprintName = "OpenInKitExample"
