--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: objective-c
 xcode_workspace: OpenInKitExample.xcworkspace
 xcode_scheme: OpenInKitExample
+before_install: gem install cocoapods
