--- a/OpenInKitExample.xcodeproj/xcshareddata/xcschemes/OpenInKitExample.xcscheme
+++ b/OpenInKitExample.xcodeproj/xcshareddata/xcschemes/OpenInKitExample.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0500"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -90,6 +90,20 @@
                ReferencedContainer = "container:OpenInKitExample.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A610EFA71844F5AF005FA08E"
+               BuildableName = "OpenInKitExampleTests.xctest"
+               BlueprintName = "OpenInKitExampleTests"
+               ReferencedContainer = "container:OpenInKitExample.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -107,6 +121,10 @@
                BlueprintName = "OpenInKitExampleTests"
                ReferencedContainer = "container:OpenInKitExample.xcodeproj">
             </BuildableReference>
+            <LocationScenarioReference
+               identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+               referenceType = "1">
+            </LocationScenarioReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
