--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 rvm: 1.9.3
-script: xctool -workspace OpenInKitExample.xcworkspace -scheme OpenInKitExample build test -sdk iphonesimulator ONLY_ACTIVE_ARCHS=NO
+script: xcodebuild test -workspace OpenInKitExample.xcworkspace -scheme OpenInKitExample -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
