Set up test project resource bundle wankery
This makes it so that the test project has the exact same resource
bundle setup as the Pod, but without needing to load the pod as a
dependency. This will make development *much* easier.

--- a/MWOpenInKitDemo.xcodeproj/xcshareddata/xcschemes/MWOpenInKitDemo.xcscheme
+++ b/MWOpenInKitDemo.xcodeproj/xcshareddata/xcschemes/MWOpenInKitDemo.xcscheme
@@ -38,6 +38,16 @@
                ReferencedContainer = "container:MWOpenInKitDemo.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A6A16CAC1851355E00778944"
+               BuildableName = "MWOpenInKitDerpTests.xctest"
+               BlueprintName = "MWOpenInKitDerpTests"
+               ReferencedContainer = "container:MWOpenInKitDemo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
