--- a/MWOpenInKit/Apps/Google Maps/Google Maps.plist
+++ b/MWOpenInKit/Apps/Google Maps/Google Maps.plist
@@ -11,7 +11,7 @@
 	</dict>
 	<key>directionsFrom:to:mode:</key>
 	<string>comgooglemaps://?saddr={from}&amp;daddr={to}&amp;directionsmode={mode}</string>
-	<key>searchFor:</key>
+	<key>searchForLocation:</key>
 	<string>comgooglemaps://?q={query}</string>
 </dict>
 </plist>
