Move URLs outside of the root of each plist
As suggested in #3

--- a/MWOpenInKit/Apps/1Password/1Password.plist
+++ b/MWOpenInKit/Apps/1Password/1Password.plist
@@ -2,9 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>openHttpURL:</key>
-	<string>ophttp://{url}</string>
-	<key>openHttpsURL:</key>
-	<string>ophttps://{url}</string>
+	<key>actions</key>
+	<dict>
+		<key>openHttpsURL:</key>
+		<string>ophttps://{url}</string>
+		<key>openHttpURL:</key>
+		<string>ophttp://{url}</string>
+	</dict>
 </dict>
 </plist>
