--- a/MWOpenInKit/Apps/Google Maps/Google Maps.plist
+++ b/MWOpenInKit/Apps/Google Maps/Google Maps.plist
@@ -9,9 +9,12 @@
 		<key>center</key>
 		<string>&amp;center={center}</string>
 	</dict>
-	<key>directionsFrom:to:mode:</key>
-	<string>comgooglemaps://?saddr={from}&amp;daddr={to}&amp;directionsmode={mode}</string>
-	<key>searchForLocation:</key>
-	<string>comgooglemaps://?q={query}</string>
+	<key>actions</key>
+	<dict>
+		<key>directionsFrom:to:mode:</key>
+		<string>comgooglemaps://?saddr={from}&amp;daddr={to}&amp;directionsmode={mode}</string>
+		<key>searchForLocation:</key>
+		<string>comgooglemaps://?q={query}</string>
+	</dict>
 </dict>
 </plist>
