--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 rvm: 1.9.3
-script: xcodebuild test -workspace MWOpenInKitDemo.xcworkspace -scheme MWOpenInKitDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script: xcodebuild test -workspace IntentKitDemo.xcworkspace -scheme IntentKitDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
