--- a/IntentKit/Apps/1Password/1Password.plist
+++ b/IntentKit/Apps/1Password/1Password.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>name</key>
+	<string>1Password</string>
 	<key>actions</key>
 	<dict>
 		<key>openHttpsURL:</key>
