--- a/IntentKit/Apps/Chrome/Chrome.plist
+++ b/IntentKit/Apps/Chrome/Chrome.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>name</key>
+	<string>Chrome</string>
 	<key>actions</key>
 	<dict>
 		<key>openHttpsURL:</key>
@@ -9,7 +11,7 @@
 		<key>openHttpURL:</key>
 		<string>googlechrome://{url}</string>
 		<key>openURL:withCallback:</key>
-			<string>googlechrome-x-callback://x-callback-url/open/?x-source={source}&amp;x-success={callback}&amp;url={url}</string>
-		</dict>
+		<string>googlechrome-x-callback://x-callback-url/open/?x-source={source}&amp;x-success={callback}&amp;url={url}</string>
+	</dict>
 </dict>
 </plist>
