--- a/IntentKit/Apps/Maps/Maps.plist
+++ b/IntentKit/Apps/Maps/Maps.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>name</key>
+	<dict>
+		<key>en</key>
+		<string>Maps</string>
+		<key>de</key>
+		<string>Karten</string>
+		<key>fr</key>
+		<string>Plans</string>
+	</dict>
 	<key>optional</key>
 	<dict>
 		<key>zoom</key>
