--- a/IntentKit/Apps/Google+/Google+.plist
+++ b/IntentKit/Apps/Google+/Google+.plist
@@ -13,7 +13,7 @@
 		<key>showGPlusEventWithId:</key>
 		<string>gplus://plus.google.com/events/{eventId}</string>
 		<key>showGPlusCommunityWithId:</key>
-		<string>gplus://plus.google.com/u/0/communities/{comunityId}</string>
+		<string>gplus://plus.google.com/u/0/communities/{communityId}</string>
 	</dict>
 	<key>fallbackUrls</key>
 	<dict>
@@ -24,7 +24,7 @@
 		<key>showGPlusEventWithId:</key>
 		<string>gplus://plus.google.com/events/{eventId}</string>
 		<key>showGPlusCommunityWithId:</key>
-		<string>https://plus.google.com/u/0/communities/{comunityId}</string>
+		<string>https://plus.google.com/u/0/communities/{communityId}</string>
 	</dict>
 </dict>
 </plist>
