--- a/IntentKit/Apps/Twitter/Twitter.plist
+++ b/IntentKit/Apps/Twitter/Twitter.plist
@@ -18,6 +18,8 @@
 		<string>twitter://mentions</string>
 		<key>showDirectMessages</key>
 		<string>twitter://connect</string>
+		<key>sendDirectMessageToScreenName:</key>
+		<string>twitter://messages?screen_name={screenName}</string>
 		<key>searchFor:</key>
 		<string>twitter://search?query={query}</string>
 		<key>tweetMessage:</key>
