--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
-script: xcodebuild test -workspace IntentKitDemo.xcworkspace -scheme IntentKitDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
-before_install: gem install cocoapods
+script: rake test
+before_install: gem install cocoapods && gem install xcpretty
