Differentiate between internal and display handler names
Pretty much every in-app handler is going to be called "In App". This
adds in logic to internally refer to activities by an internal
identifier, which may or may not be the display name specified in the
plist.

--- a/IntentKit/Apps/Defaults/INKBrowserHandler.plist
+++ b/IntentKit/Apps/Defaults/INKBrowserHandler.plist
@@ -5,6 +5,6 @@
 	<key>firstPartyAppName</key>
 	<string>Safari</string>
 	<key>default</key>
-	<string>In App</string>
+	<string>INKWebView</string>
 </dict>
 </plist>
