--- a/IntentKit/Apps/INKMailSheet/INKMailSheet.plist
+++ b/IntentKit/Apps/INKMailSheet/INKMailSheet.plist
@@ -2,14 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>className</key>
-	<string>INKWebView</string>
 	<key>name</key>
 	<string>In App</string>
+	<key>className</key>
+	<string>INKMailSheet</string>
 	<key>actions</key>
 	<array>
-		<string>openHttpURL:</string>
-		<string>openHttpsURL:</string>
+		<string>sendMailTo:</string>
 	</array>
 </dict>
 </plist>
