--- a/IntentKit/Apps/INKWebView/INKWebView.plist
+++ b/IntentKit/Apps/INKWebView/INKWebView.plist
@@ -2,13 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>className</key>
-	<string>INKMailSheet</string>
 	<key>name</key>
 	<string>In App</string>
 	<key>actions</key>
 	<array>
-		<string>sendMailTo:</string>
+		<string>openHttpURL:</string>
+		<string>openHttpsURL:</string>
 	</array>
+	<key>className</key>
+	<string>INKWebView</string>
 </dict>
 </plist>
