--- a/IntentKit/Apps/Defaults/INKTwitterHandler.plist
+++ b/IntentKit/Apps/Defaults/INKTwitterHandler.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>default</key>
-	<string>Twitter</string>
+	<string>INKTweetSheet</string>
 	<key>fallbackUrls</key>
 	<dict>
 		<key>showUserWithScreenName:</key>
