Switch templating to use double/triple braces
It's become necessary to be able to escape or not-escape template data
on a per-action basis. This now follows Mustache's lead to have `{{ }}`
represent HTML-escaped data and `{{{ }}}` represent unescaped data.`

--- a/IntentKit/Apps/1Password/1Password.plist
+++ b/IntentKit/Apps/1Password/1Password.plist
@@ -7,9 +7,9 @@
 	<key>actions</key>
 	<dict>
 		<key>openHttpsURL:</key>
-		<string>ophttps://{url}</string>
+		<string>ophttps://{{{url}}}</string>
 		<key>openHttpURL:</key>
-		<string>ophttp://{url}</string>
+		<string>ophttp://{{{url}}}</string>
 	</dict>
 </dict>
 </plist>
