--- a/IntentKit/Apps/Maps/Maps.plist
+++ b/IntentKit/Apps/Maps/Maps.plist
@@ -16,16 +16,16 @@
 	<key>optional</key>
 	<dict>
 		<key>zoom</key>
-		<string>&amp;z={zoom}</string>
+		<string>&amp;z={{zoom}}</string>
 		<key>center</key>
-		<string>&amp;ll={center}</string>
+		<string>&amp;ll={{center}}</string>
 	</dict>
 	<key>actions</key>
 	<dict>
 		<key>directionsFrom:to:mode:</key>
-		<string>http://maps.apple.com/?saddr={from}&amp;daddr={to}</string>
+		<string>http://maps.apple.com/?saddr={{from}}&amp;daddr={{to}}</string>
 		<key>searchForLocation:</key>
-		<string>http://maps.apple.com/?q={query}</string>
+		<string>http://maps.apple.com/?q={{query}}</string>
 	</dict>
 </dict>
 </plist>
