--- a/IntentKit/Apps/Tweetbot/Tweetbot.plist
+++ b/IntentKit/Apps/Tweetbot/Tweetbot.plist
@@ -7,48 +7,48 @@
 	<key>optional</key>
 	<dict>
 		<key>callbackURL</key>
-		<string>&amp;callback_url={callbackURL}</string>
+		<string>&amp;callback_url={{callbackURL}}</string>
 	</dict>
 	<key>actions</key>
 	<dict>
 		<key>showTweetWithId:</key>
-		<string>tweetbot://{activeUser}/status/{tweetId}?</string>
+		<string>tweetbot://{{activeUser}}/status/{{tweetId}}?</string>
 		<key>showUserWithScreenName:</key>
-		<string>tweetbot://{activeUser}/user_profile/{screenName}?</string>
+		<string>tweetbot://{{activeUser}}/user_profile/{{screenName}}?</string>
 		<key>showUserWithId:</key>
-		<string>tweetbot://{activeUser}/user_profile/{userId}?</string>
+		<string>tweetbot://{{activeUser}}/user_profile/{{userId}}?</string>
 		<key>showTimeline</key>
-		<string>tweetbot://{activeUser}/timeline?</string>
+		<string>tweetbot://{{activeUser}}/timeline?</string>
 		<key>showMentions</key>
-		<string>tweetbot://{activeUser}/mentions?</string>
+		<string>tweetbot://{{activeUser}}/mentions?</string>
 		<key>showDirectMessages</key>
-		<string>tweetbot://{activeUser}/direct_messages?</string>
+		<string>tweetbot://{{activeUser}}/direct_messages?</string>
 		<key>showRetweets</key>
-		<string>tweetbot://{activeUser}/retweets?</string>
+		<string>tweetbot://{{activeUser}}/retweets?</string>
 		<key>showLists</key>
-		<string>tweetbot://{activeUser}/lists?</string>
+		<string>tweetbot://{{activeUser}}/lists?</string>
 		<key>showListWithId:</key>
-		<string>tweetbot://{activeUser}/list/{listId}?</string>
+		<string>tweetbot://{{activeUser}}/list/{listId}?</string>
 		<key>showFavorites</key>
-		<string>tweetbot://{activeUser}/favorites?</string>
+		<string>tweetbot://{{activeUser}}/favorites?</string>
 		<key>searchFor:</key>
-		<string>tweetbot://{activeUser}/search?query={query}</string>
+		<string>tweetbot://{{activeUser}}/search?query={{query}}</string>
 		<key>tweetSearchPage</key>
-		<string>tweetbot://{activeUser}/search?</string>
+		<string>tweetbot://{{activeUser}}/search?</string>
 		<key>tweetMessage:</key>
-		<string>tweetbot://{activeUser}/post?text={message}</string>
+		<string>tweetbot://{{activeUser}}/post?text={{message}}</string>
 		<key>tweetMessage:inReplyTo:</key>
-		<string>tweetbot://{activeUser}/post?text={message}&amp;in_reply_to_status_id={replyId}</string>
+		<string>tweetbot://{{activeUser}}/post?text={{message}}&amp;in_reply_to_status_id={{replyId}}</string>
 		<key>followUser:</key>
-		<string>tweetbot://{activeUser}/follow/{user}?</string>
+		<string>tweetbot://{{activeUser}}/follow/{{user}}?</string>
 		<key>unfollowUser:</key>
-		<string>tweetbot://{activeUser}/unfollow/{user}?</string>
+		<string>tweetbot://{{activeUser}}/unfollow/{{user}}?</string>
 		<key>favoriteTweetWithId:</key>
-		<string>tweetbot://{activeUser}/favorite/{tweetId}?</string>
+		<string>tweetbot://{{activeUser}}/favorite/{{tweetId}}?</string>
 		<key>unfavoriteTweetWithId:</key>
-		<string>tweetbot://{activeUser}/unfavorite/{tweetId}?</string>
+		<string>tweetbot://{{activeUser}}/unfavorite/{{tweetId}}?</string>
 		<key>retweetTweetWithId:</key>
-		<string>tweetbot://{activeUser}/retweet/{tweetId}?</string>
+		<string>tweetbot://{{activeUser}}/retweet/{{tweetId}}?</string>
 	</dict>
 </dict>
 </plist>
