--- a/IntentKit/Apps/Google Maps/Google Maps.plist
+++ b/IntentKit/Apps/Google Maps/Google Maps.plist
@@ -7,16 +7,16 @@
 	<key>optional</key>
 	<dict>
 		<key>zoom</key>
-		<string>&amp;zoom={zoom}</string>
+		<string>&amp;zoom={{zoom}}</string>
 		<key>center</key>
-		<string>&amp;center={center}</string>
+		<string>&amp;center={{center}}</string>
 	</dict>
 	<key>actions</key>
 	<dict>
 		<key>directionsFrom:to:mode:</key>
-		<string>comgooglemaps://?saddr={from}&amp;daddr={to}&amp;directionsmode={mode}</string>
+		<string>comgooglemaps://?saddr={{from}}&amp;daddr={{to}}&amp;directionsmode={{mode}}</string>
 		<key>searchForLocation:</key>
-		<string>comgooglemaps://?q={query}</string>
+		<string>comgooglemaps://?q={{query}}</string>
 	</dict>
 </dict>
 </plist>
