--- a/IntentKit/Apps/Google+/Google+.plist
+++ b/IntentKit/Apps/Google+/Google+.plist
@@ -7,13 +7,13 @@
 	<key>actions</key>
 	<dict>
 		<key>showGPlusProfileWithId:</key>
-		<string>gplus://plus.google.com/{userId}</string>
+		<string>gplus://plus.google.com/{{userId}}</string>
 		<key>showGPlusProfileWithName:</key>
-		<string>gplus://plus.google.com/+{userName}</string>
+		<string>gplus://plus.google.com/+{{userName}}</string>
 		<key>showGPlusEventWithId:</key>
-		<string>gplus://plus.google.com/events/{eventId}</string>
+		<string>gplus://plus.google.com/events/{{eventId}}</string>
 		<key>showGPlusCommunityWithId:</key>
-		<string>gplus://plus.google.com/u/0/communities/{communityId}</string>
+		<string>gplus://plus.google.com/u/0/communities/{{communityId}}</string>
 	</dict>
 </dict>
 </plist>
