--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: objective-c
+before_install: gem install cocoapods xcpretty slather -N
 script: rake test
-before_install: gem install cocoapods && gem install xcpretty
+after_success: slather
