--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: objective-c
-before_install: gem install cocoapods xcpretty slather activesupport -N
-script: rake test
+cache: cocoapods
+xcode_workspace: IntentKitDemo.xcworkspace
+xcode_scheme: IntentKitDemo
+xcode_sdk: iphonesimulator
+podfile: Podfile
+
+before_install:
+  - gem install cocoapods slather -N
+
 after_success: slather
