Remove nonexistent (and ableist :( ) test target from scheme

--- a/IntentKitDemo.xcodeproj/xcshareddata/xcschemes/IntentKitDemo.xcscheme
+++ b/IntentKitDemo.xcodeproj/xcshareddata/xcschemes/IntentKitDemo.xcscheme
@@ -38,16 +38,6 @@
                ReferencedContainer = "container:IntentKitDemo.xcodeproj">
             </BuildableReference>
          </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A6A16CAC1851355E00778944"
-               BuildableName = "MWOpenInKitDerpTests.xctest"
-               BlueprintName = "MWOpenInKitDerpTests"
-               ReferencedContainer = "container:IntentKitDemo.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
@@ -68,7 +58,8 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A6B73C62184D341E0055C60D"
@@ -86,7 +77,8 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A6B73C62184D341E0055C60D"
