Added Messenger, Phone and FaceTime which are all linked via a common "communicateWithPhoneNumber" selector, but can still operate by themselves.
Add in the "voiceCall", "videoCall", "textMessage" and "chat" style selectors that could be used to commonalise functionality across multiple apps (like Skype and GoogleVoice)

Added Skype and WhatsApp, but haven't "glued" in functionality for the handlers into the demo

--- a/IntentKit/Apps/FaceTime/FaceTime.plist
+++ b/IntentKit/Apps/FaceTime/FaceTime.plist
@@ -8,6 +8,8 @@
 	<dict>
 		<key>videoCall:</key>
 		<string>facetime://{{number}}</string>
+		<key>communicateWithPhoneNumber:</key>
+		<string>telprompt://{{number}}</string>
 	</dict>
 </dict>
 </plist>
