--- a/IntentKit/Apps/Google/Google.plist
+++ b/IntentKit/Apps/Google/Google.plist
@@ -6,10 +6,15 @@
 	<string>Google</string>
 	<key>actions</key>
 	<dict>
+		<!-- Can't find concrete examples of GoogleVoice URL scheme
+		and since I'm not in the US, I can't test it either
+		The GoogleVoice app "seems" to have been rolled into the
+		Google App as near as I can tell
 		<key>voiceCall:</key>
 		<string>gvmdial://{{number}}</string>
 		<key>textMessage:</key>
 		<string>gvmsms://{{number}}</string>
+		-->
 	</dict>
 </dict>
 </plist>
