Fixed URL for face time trying to make phone call

--- a/IntentKit/Apps/FaceTime/FaceTime.plist
+++ b/IntentKit/Apps/FaceTime/FaceTime.plist
@@ -9,7 +9,7 @@
 		<key>videoCall:</key>
 		<string>facetime://{{number}}</string>
 		<key>communicateWithPhoneNumber:</key>
-		<string>telprompt://{{number}}</string>
+		<string>facetime://{{number}}</string>
 	</dict>
 </dict>
 </plist>
