Added support for city mapper and improved handler with extra action

--- a/IntentKit/Apps/Google Maps/Google Maps.plist
+++ b/IntentKit/Apps/Google Maps/Google Maps.plist
@@ -17,6 +17,8 @@
 		<string>comgooglemaps://?saddr={{from}}&amp;daddr={{to}}&amp;directionsmode={{mode}}</string>
 		<key>searchForLocation:</key>
 		<string>comgooglemaps://?q={{query}}</string>
+		<key>openLocation:title:</key>
+		<string>comgooglemaps://?q={{coordinate}}</string>
 	</dict>
 </dict>
 </plist>
