--- a/IntentKit/Apps/Maps/Maps.plist
+++ b/IntentKit/Apps/Maps/Maps.plist
@@ -26,6 +26,8 @@
 		<string>http://maps.apple.com/?saddr={{from}}&amp;daddr={{to}}</string>
 		<key>searchForLocation:</key>
 		<string>http://maps.apple.com/?q={{query}}</string>
+		<key>openLocation:title:</key>
+		<string>http://maps.apple.com/?q={{title}}&amp;ll={{coordinate}}</string>
 	</dict>
 </dict>
 </plist>
