Added Maps translation to Spanish

--- a/IntentKit/Apps/Maps/Maps.plist
+++ b/IntentKit/Apps/Maps/Maps.plist
@@ -12,6 +12,8 @@
 		<string>Plans</string>
 		<key>nl</key>
 		<string>Kaarten</string>
+		<key>es</key>
+		<string>Mapas</string>
 	</dict>
 	<key>optional</key>
 	<dict>
